@@ -5,9 +5,15 @@ http://www.springframework.org/osgi
 Changes in version 1.1.0 final (2008-0m-dd)
 -------------------------------------------
 
+General
+* removed deprecated items
+
 Package org.springframework.osgi.extender
 * improved shutdown ordering algorithm to consider published ApplicationContext
 * fixed bug that prevented the shutdownTaskExecutor option from being used
+
+Package org.springframework.osgi.test
+* removed deprecated #getPlatformProperties() method from platforms classes
 
 
 Changes in version 1.1.0 RC1 (2008-06-24)
